examples/invalid/undeclared-variable.por
algoritmo "undeclared"

inicio
    x <- 10
fimalgoritmo
